v1.1.1 Fix invisible text when hovering over header menu (#72)
* v1.1.1 Fix invisible text when hovering over header menu

--- a/src/scss/partials/_nav.scss
+++ b/src/scss/partials/_nav.scss
@@ -197,6 +197,10 @@ $nav-popover-padding               : spacing(x2);
                     .c-header--transparent & {
                         color: $nav-text-color--transparent;
                     }
+
+                    .c-header--transparent .c-nav-popoverList & {
+                        color: inherit;
+                    }
                 }
             }
         }
